added genreics for print and code clean up